# face-detection

./: CMakeLists.txt  build.sh
src/cc/: EffectEngine.cc  FaceSpaceAbstractState.cc  FaceSpaceCore.cc  FaceSpaceRenderer.cc  FaceSpaceWindow.cc  Invoke.cc  Matrix.cc
src/h/: EffectEngine.h  FaceSpaceAbstractState.h  FaceSpaceCore.h  FaceSpaceRenderer.h  FaceSpaceWindow.h
